--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
       
         <div class="row">
-            <form action="index.php" method="POST" class="card">
+            <form action="rrrrr/index.php" method="POST" class="card">
                 <div>
                     <label for="inputNome">Primeiro Nome:</label>
                     <input type="text" id="inputNome" name="nome" required maxlength="25" minlength="2">
